# hermes-napcat

./: README.md  README.zh.md  after-install.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
hermes_napcat/: __init__.py  adapter.py  api.py  cli.py  installer.py  napcat.py  qq_tool.py  types.py
