[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-napcat"
version = "0.3.2"
description = "NapCat (QQ / OneBot 11) platform adapter for Hermes Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "TravonD", email = "zhouyanbai@qq.com" },
]
keywords = ["hermes", "napcat", "qq", "onebot", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.scripts]
hermes-napcat = "hermes_napcat.cli:main"

[project.urls]
Homepage = "https://github.com/Traveler0014/hermes-napcat"
Issues   = "https://github.com/Traveler0014/hermes-napcat/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_napcat*"]

[tool.setuptools.package-data]
hermes_napcat = ["skills/**/*.md"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hermes_napcat"]
